view finance en cours

--- a/public/views/finance.html
+++ b/public/views/finance.html
@@ -1,3 +1,7 @@
 TEST FINANCE
-{{testeuh}}
-{{stripeData}}
+Balance: <br>
+{{stripeBalance}} <br>
+Charges: <br>
+{{stripeCharges}} <br>
+Customers: <br>
+{{stripeCustomers}}
