--- a/public/views/auth/login.html
+++ b/public/views/auth/login.html
@@ -1,2 +1,13 @@
 <!-- TODO -->
 <p>USERS LOGIN</p>
+<form ng-submit="vm.onSubmit()">
+  <div class="form-group">
+    <label for="email">Email address</label>
+    <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="vm.credentials.email">
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
+  </div>
+  <button type="submit" class="btn btn-default">Sign in!</button>
+</form>
