--- a/public/views/auth/register.html
+++ b/public/views/auth/register.html
@@ -1,2 +1,21 @@
 <!-- TODO -->
 <p>USER REGISTER</p>
+<form ng-submit="vm.onSubmit()">
+    <label for="first_name">First name:</label>
+    <input type="text" id="first_name" placeholder="Your first name" ng-model="vm.credentials.first_name">
+    <br>
+    <label for="last_name">Last name:</label>
+    <input type="text" id="last_name" placeholder="Your last name" ng-model="vm.credentials.last_name">
+    <br>
+    <label for="email">Email address:</label>
+    <input type="email" id="email" placeholder="Enter email" ng-model="vm.credentials.email">
+    <br>
+    <!-- TODO : COMPANY -->
+    <label for="role">Role:</label>
+    <input type="text" id="role"  ng-model="vm.credentials.role">
+    <br>
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
+  </div>
+  <button type="submit" class="btn btn-default">Register!</button>
+</form>
