receiving data from chatbox on server side

--- a/public/views/shared/chat.html
+++ b/public/views/shared/chat.html
@@ -1,69 +1,32 @@
 <div id="live-chat">
-
 	<header class="clearfix">
-
 		<a href="#" class="chat-close">x</a>
-
-		<h4>John Doe</h4>
-
+		<h4><span ng-bind="nickName"></span></h4>
 		<span class="chat-message-counter">3</span>
-
 	</header>
 
+	<!-- TODO FETCH ALL MSGS COMING FROM THAT CHAT AND DO AN NG-REPEAT -->
 	<div class="chat">
-
 		<div class="chat-history">
 
 			<div class="chat-message clearfix">
-
 				<img src="http://lorempixum.com/32/32/people" alt="" width="32" height="32">
-
 				<div class="chat-message-content clearfix">
-
 					<span class="chat-time">13:35</span>
-
 					<h5>John Doe</h5>
-
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, explicabo quasi ratione odio dolorum harum.</p>
-
 				</div> <!-- end chat-message-content -->
-
 			</div> <!-- end chat-message -->
 
 			<hr>
 
 			<div class="chat-message clearfix">
-
 				<img src="http://gravatar.com/avatar/2c0ad52fc5943b78d6abe069cc08f320?s=32" alt="" width="32" height="32">
-
 				<div class="chat-message-content clearfix">
-
 					<span class="chat-time">13:37</span>
-
 					<h5>Marco Biedermann</h5>
-
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, nulla accusamus magni vel debitis numquam qui tempora rem voluptatem delectus!</p>
-
 				</div> <!-- end chat-message-content -->
-
-			</div> <!-- end chat-message -->
-
-			<hr>
-
-			<div class="chat-message clearfix">
-
-				<img src="http://lorempixum.com/32/32/people" alt="" width="32" height="32">
-
-				<div class="chat-message-content clearfix">
-
-					<span class="chat-time">13:38</span>
-
-					<h5>John Doe</h5>
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-
-				</div> <!-- end chat-message-content -->
-
 			</div> <!-- end chat-message -->
 
 			<hr>
@@ -72,12 +35,12 @@
 
 		<!-- <p class="chat-feedback">Your partner is typing…</p> -->
 
-		<form action="#" method="post">
+		<form role='form' novalidate name='chatform' ng-submit="sendMessage(data.message)">
 
 			<fieldset>
 
-				<input type="text" placeholder="Type your message…" autofocus>
-				<input type="hidden">
+				<input type="text" placeholder="Type your message…" autofocus ng-max='50' ng-model='data.message'>
+				<button type="submit" class='hidden' ng-enable='form.$valid'></button>
 
 			</fieldset>
 
