--- a/public/views/createCompany.html
+++ b/public/views/createCompany.html
@@ -24,3 +24,5 @@ Or create one:
 
   <button type="submit" class="btn btn-default">Create company</button>
 </form>
+
+<!-- <a href="{{linkedinLink}}">Linkedin Test</a> -->
