--- a/public/views/shared/chat.html
+++ b/public/views/shared/chat.html
@@ -1,42 +1,27 @@
-<div id="live-chat">
+<div id="live-chat" ng-if="isLoggedIn">
 	<header class="clearfix">
 		<a href="#" class="chat-close">x</a>
-		<h4><span ng-bind="nickName"></span></h4>
+		<h4><span>CHANGE BY WHO YOURE TALKING TO</span></h4>
 		<span class="chat-message-counter">3</span>
 	</header>
 
 	<!-- TODO FETCH ALL MSGS COMING FROM THAT CHAT AND DO AN NG-REPEAT -->
 	<div class="chat">
-		<div class="chat-history">
+		<div class="chat-history" ng-if="youreTalkingToMe" >
 
-			<div class="chat-message clearfix">
-				<img src="http://lorempixum.com/32/32/people" alt="" width="32" height="32">
-				<div class="chat-message-content clearfix">
-					<span class="chat-time">13:35</span>
-					<h5>John Doe</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, explicabo quasi ratione odio dolorum harum.</p>
-				</div> <!-- end chat-message-content -->
-			</div> <!-- end chat-message -->
-
-			<hr>
-
-			<div class="chat-message clearfix">
+			<div class="chat-message clearfix" ng-repeat="message in messageLog">
 				<img src="http://gravatar.com/avatar/2c0ad52fc5943b78d6abe069cc08f320?s=32" alt="" width="32" height="32">
 				<div class="chat-message-content clearfix">
-					<span class="chat-time">13:37</span>
-					<h5>Marco Biedermann</h5>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, nulla accusamus magni vel debitis numquam qui tempora rem voluptatem delectus!</p>
+					<span class="chat-time">{{message.time | date : 'HH:mm'}}</span>
+					<h5>{{ currentUser.first_name | capitalize }} {{ currentUser.last | capitalize }}</h5>
+					<p>{{ message.message }}</p>
 				</div> <!-- end chat-message-content -->
 			</div> <!-- end chat-message -->
 
-			<hr>
-
 		</div> <!-- end chat-history -->
-
 		<!-- <p class="chat-feedback">Your partner is typing…</p> -->
 
 		<form role='form' novalidate name='chatform' ng-submit="sendMessage(data.message)">
-
 			<fieldset>
 
 				<input type="text" placeholder="Type your message…" autofocus ng-max='50' ng-model='data.message'>
