--- a/public/views/shared/chat.html
+++ b/public/views/shared/chat.html
@@ -13,7 +13,7 @@
 				<img src="http://gravatar.com/avatar/2c0ad52fc5943b78d6abe069cc08f320?s=32" alt="" width="32" height="32">
 				<div class="chat-message-content clearfix">
 					<span class="chat-time">{{message.time | date : 'HH:mm'}}</span>
-					<h5>{{ currentUser.first_name | capitalize }} {{ currentUser.last | capitalize }}</h5>
+					<h5>{{ message.source }}</h5>
 					<p>{{ message.message }}</p>
 				</div> <!-- end chat-message-content -->
 			</div> <!-- end chat-message -->
