--- a/public/views/shared/topbar.html
+++ b/public/views/shared/topbar.html
@@ -52,7 +52,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="login.html">
+                    <a ui-sref="login">
                         <i class="fa fa-sign-out"></i> Log out
                     </a>
                 </li>
