--- a/public/views/auth/register.html
+++ b/public/views/auth/register.html
@@ -1,21 +1,36 @@
-<!-- TODO -->
-<p>USER REGISTER</p>
-<form ng-submit="vm.onSubmit()">
-    <label for="first_name">First name:</label>
-    <input type="text" id="first_name" placeholder="Your first name" ng-model="vm.credentials.first_name">
-    <br>
-    <label for="last_name">Last name:</label>
-    <input type="text" id="last_name" placeholder="Your last name" ng-model="vm.credentials.last_name">
-    <br>
-    <label for="email">Email address:</label>
-    <input type="email" id="email" placeholder="Enter email" ng-model="vm.credentials.email">
-    <br>
-    <!-- TODO : COMPANY -->
-    <label for="role">Role:</label>
-    <input type="text" id="role"  ng-model="vm.credentials.role">
-    <br>
-    <label for="password">Password</label>
-    <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
+<div class="container">
+  <form class="col-sm-8 col-offset-sm-2">
+    <div class="row">
+      <h1>Register</h1>
+      <div class="spacer"></div>
+      <form enctype="multipart/formdata">
+        <div class="form-group">
+          <label for="first_name">First name</label>
+          <input type="text" id="first_name" class="form-control" ng-model="vm.credentials.first_name">
+        </div>
+        <div class="form-group">
+          <label for="last_name">Last name</label>
+          <input type="text" id="last_name" class="form-control" ng-model="vm.credentials.last_name">
+        </div>
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" id="email" class="form-control" ng-model="vm.credentials.email">
+        </div>
+        <div class="form-group">
+          <label for="role">Role</label>
+          <input type="text" id="role" class="form-control" ng-model="vm.credentials.role">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputFile">Profile pic</label>
+          <input type="file" uploader="uploader" file-model="vm.credentials.picture" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp" multiple>
+          <small id="fileHelp" class="form-text text-muted">Great pictures make you more successfull, or not</small>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
+        </div>
+        <button ng-click="vm.createUser(vm.credentials)" class="btn btn-primary" type="submit">Register</button>
+      </form>
+    </div>
   </div>
-  <button type="submit" class="btn btn-default">Register!</button>
-</form>
+</div>
