--- a/public/views/sales.html
+++ b/public/views/sales.html
@@ -90,100 +90,22 @@
                         <th>Demos</th>
                       </tr>
                     </thead>
-                    <tbody>
+                    <tbody ng-repeat="deal in pipedriveData.pipedrive_json | filter: {status: 'won'} track by deal.owner_name">
                       <tr>
                         <td class="client-avatar"><img alt="image" src="assets/images/a2.jpg"> </td>
-                        <td><a data-toggle="tab" href="#contact-1" class="client-link">Anthony Jackson</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                      <tr>
-                        <td class="client-avatar"><img alt="image" src="assets/images/a3.jpg"> </td>
-                        <td><a data-toggle="tab" href="#contact-2" class="client-link">Rooney Lindsay</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                      <tr>
-                        <td class="client-avatar"><img alt="image" src="assets/images/a4.jpg"> </td>
-                        <td><a data-toggle="tab" href="#contact-3" class="client-link">Lionel Mcmillan</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                      <tr>
-                        <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a5.jpg"></a> </td>
-                        <td><a data-toggle="tab" href="#contact-4" class="client-link">Edan Randall</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                      <tr>
-                        <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a6.jpg"></a> </td>
-                        <td><a data-toggle="tab" href="#contact-2" class="client-link">Jasper Carson</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                      <tr>
-                        <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a7.jpg"></a> </td>
-                        <td><a data-toggle="tab" href="#contact-3" class="client-link">Reuben Pacheco</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                      <tr>
-                        <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a1.jpg"></a> </td>
-                        <td><a data-toggle="tab" href="#contact-1" class="client-link">Simon Carson</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                      <tr>
-                        <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a3.jpg"></a> </td>
-                        <td><a data-toggle="tab" href="#contact-2" class="client-link">Rooney Lindsay</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                      <tr>
-                        <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a4.jpg"></a> </td>
-                        <td><a data-toggle="tab" href="#contact-3" class="client-link">Lionel Mcmillan</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                      <tr>
-                        <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a5.jpg"></a> </td>
-                        <td><a data-toggle="tab" href="#contact-4" class="client-link">Edan Randall</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                      <tr>
-                        <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a2.jpg"></a> </td>
-                        <td><a data-toggle="tab" href="#contact-1" class="client-link">Anthony Jackson</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                      <tr>
-                        <td class="client-avatar"><a href=""><img alt="image" src="assets/images/a7.jpg"></a> </td>
-                        <td><a data-toggle="tab" href="#contact-2" class="client-link">Reuben Pacheco</a></td>
-                        <td> 7 </td>
-                        <td> 47 </td>
-                        <td> 19 </td>
-                      </tr>
-                    </tbody>
-                  </table>
+                        <td><a data-toggle="tab" href="#contact-2" class="client-link">{{ deal.owner_name }}<a/></td>
+                          <td> 7 </td>
+                          <td> 47 </td>
+                          <td> 19 </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </div>
   </div>
-</div>
