--- a/public/views/sales.html
+++ b/public/views/sales.html
@@ -64,7 +64,6 @@
                 <td>{{ deal.person_name }}</td>
                 <td>{{ deal.owner_name }}</td>
               </tr>
-
             </tbody>
           </table>
         </div>
@@ -90,13 +89,13 @@
                         <th>Demos</th>
                       </tr>
                     </thead>
-                    <tbody ng-repeat="deal in pipedriveData.pipedrive_json | filter: {status: 'won'} track by deal.owner_name">
+                    <tbody ng-repeat="deal in pipedriveData.pipedrive_json | unique: {owner_name: 'Vince'}">
                       <tr>
                         <td class="client-avatar"><img alt="image" src="assets/images/a2.jpg"> </td>
                         <td><a data-toggle="tab" href="#contact-2" class="client-link">{{ deal.owner_name }}<a/></td>
-                          <td> 7 </td>
-                          <td> 47 </td>
-                          <td> 19 </td>
+                          <td> {{ deal_count }} </td>
+                          <td> 17 </td>
+                          <td> 6 </td>
                         </tr>
                       </tbody>
                     </table>
@@ -109,3 +108,4 @@
       </div>
     </div>
   </div>
+</div>
