--- a/public/views/userprofile.html
+++ b/public/views/userprofile.html
@@ -2,15 +2,16 @@
     <div class="row m-b-lg m-t-lg">
         <div class="col-md-6">
             <div class="profile-image">
-                <img src="assets/images/a4.jpg" class="assets/images-circle circle-border m-b-md" alt="profile">
+                <img src="{{currentUser.picture}}" class="assets/images-circle circle-border m-b-md" alt="profile">
             </div>
             <div class="profile-info">
                 <div class="">
                     <div>
                         <h2 class="no-margins">
-                            Firstname Lastname
+                            {{currentUser.first_name}} {{currentUser.last_name}}
                         </h2>
                         <h4>Rôle</h4>
+                        <p>{{currentUser.role}}</p>
                     </div>
                 </div>
             </div>
