userprofile with param id

--- a/public/views/userprofile.html
+++ b/public/views/userprofile.html
@@ -14,6 +14,8 @@
                       <button ng-click="Follow()" ng-init="count=0">
                         Follow
                       </button>
+                      This user follows:
+                      <div ng-repeat="value in Following"> ... </div>
                     </div>
                   </div>
                 </div>
